animation fixes on safari

--- a/client/sass/_animations.scss
+++ b/client/sass/_animations.scss
@@ -2,39 +2,42 @@
 // animations
 //
 .left-to-right-enter {
-  margin-left: -100%;
+  position: absolute;
+  left: -100%;
+  top: 0;
   width: 100%;
-  transition: 0.5s;
+  transition: all 0.5s ease;
 }
 .left-to-right-enter.left-to-right-enter-active {
-  margin-left: 0;
+  left: 0;
 }
 .left-to-right-leave {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  transition: 0.5s;
+  transition: all 0.5s ease;
 }
 .left-to-right-leave.left-to-right-leave-active {
   left: 100%;
 }
 
 .right-to-left-enter {
-  margin-left: 100%;
-  width: 100%;
-  transition: 0.5s;
-}
-.right-to-left-enter.right-to-left-enter-active {
-  margin-left: 0;
-}
-.right-to-left-leave {
   position: absolute;
-  left: 0;
+  left: 100%;
   top: 0;
   width: 100%;
-  transition: 0.5s;
+  transition: all 0.5s ease;
+}
+.right-to-left-enter.right-to-left-enter-active {
+  left: 0;
+}
+.right-to-left-leave {
+  transition: left 0.5s ease;
 }
 .right-to-left-leave.right-to-left-leave-active {
+  position: absolute;
+  top: 0;
+  width: 100%;
   left: -100%;
 }
